turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: not found: value blub
  blub = rule(state)(id)
  ^